integration_tests/codegen_fail/fail/object/impl_incompatible_input_object.rs.disabled
// FIXME: enable this if interfaces are supported
#[derive(juniper::GraphQLInputObject)]
#[graphql(scalar = juniper::DefaultScalarValue)]
struct Obj {
    field: String,
}

struct Object {}

#[juniper::graphql_object]
impl Object {
    fn test(&self) -> Obj {
        Obj {
            field: String::new(),
        }
    }
}

fn main() {}
